--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -34,18 +34,16 @@ h2 {
     float: right;
 }
 
-.flag_nl {
-	background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg");
-}
-
 table tr {
     text-align: left;
 }
 
 table {
-    width: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: scroll;
+    width: 100%;
+    display: inline-block;
 }
 
 .c_button {
@@ -65,9 +63,33 @@ table {
     color: white;
 }
 
-.table tbody tr:hover, #city:hover {
+table tbody tr:hover  {
     background-color: #373737;
     color: white;
     transition: 100ms;
     cursor: pointer;
+}
+
+button {
+    background: #2bb1e4;
+    color: white;
+    border: none;
+    margin: 15px 0;
+    border-radius: 5px;
+    padding: 10px 15px;
+    font-size: 16px;
+    outline: none;
+    cursor: pointer;
+}
+
+
+@media only screen and (min-width: 1100px){
+	table {
+		display: table;
+	}
+	#weatherInfo, #myLocation {
+		display: inline-block;
+		width: 50%;
+		vertical-align: top;
+	}
 }
