--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,15 +1,18 @@
 html {
 	padding: 10px;
 	margin: 0;
+	
 }
 
 body {
 	background: #eceff1;
 	padding: 0;
 	margin: 0;
+	font-family: 'Open Sans', sans-serif !important;
+	
 }
 
-label {
+#frame label {
     display: inline-block;
     width: 49%;
 }
@@ -82,6 +85,14 @@ button {
     cursor: pointer;
 }
 
+.change {
+	background: #009688;
+}
+	
+.delete {
+	background: #f44336;
+}
+
 
 @media only screen and (min-width: 1100px){
 	table {
@@ -92,4 +103,51 @@ button {
 		width: 50%;
 		vertical-align: top;
 	}
+}
+
+.modal {
+	display: none;
+    width: 500px;
+    height: 240px;
+    background-color: white;
+    padding: 15px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.42);
+}
+
+#modal_close {
+	position: absolute;
+	right: 0;
+	top: 0px;
+	color: black;
+	padding: 15px 20px;
+	margin: 0;
+	cursor: pointer;	
+}
+
+h3 {
+    margin: 0;
+}
+
+.modal-head {
+    padding-bottom: 15px;
+    border-bottom: 1px solid #d0d0d0;
+    margin-bottom: 21px;
+    padding-top: 10px;
+}
+
+
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.panel {
+  display: none;
+  overflow: hidden;
 }
